--- a/cfgov/unprocessed/apps/mmt-my-money-calendar/css/components/swipeable-list.less
+++ b/cfgov/unprocessed/apps/mmt-my-money-calendar/css/components/swipeable-list.less
@@ -3,11 +3,19 @@
   overflow: hidden;
   width: 100%;
 
+  /*
+  &.-swiped {
+    .swipeable-item__background {
+      z-index: 1;
+    }
+  }
+  */
+
   &__background {
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    z-index: 0;
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-end;
@@ -23,10 +31,29 @@
     align-items: center;
     width: 100%;
     background-color: #fff;
-    padding: 10px 0;
+    padding: 10px 1rem;
+    z-index: 1;
 
     &.-has-transition {
       transition: transform 500ms ease-out;
     }
+  }
+
+  &__button {
+    height: 100%;
+    display: block;
+    border: 0;
+    background: #fff;
+    min-width: 42px;
+  }
+
+  &__button--edit {
+    background-color: @green;
+    color: #fff;
+  }
+
+  &__button--delete {
+    background-color: @red;
+    color: #fff;
   }
 }
